[gd_scene load_steps=8 format=3 uid="uid://dds4dogcoxu6b"]

[ext_resource type="Material" uid="uid://cb821pwtv3vou" path="res://gui/crt_shader.tres" id="1_i8dcl"]
[ext_resource type="FontFile" uid="uid://dh407sxqo5x3i" path="res://gui/theme/VCRosdNEUE.ttf" id="2_7dmww"]
[ext_resource type="Theme" uid="uid://buqgb4lyf7xxf" path="res://gui/theme/game_gui.tres" id="2_j7p4g"]
[ext_resource type="Script" path="res://gui/game_gui.gd" id="4_l6xe6"]
[ext_resource type="Texture2D" uid="uid://byorfv5i13tnh" path="res://gui/title.png" id="5_q8wjm"]
[ext_resource type="FontFile" uid="uid://bh6wa32yo0mj5" path="res://gui/theme/VCR_OSD_MONO.ttf" id="6_agor5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g8rgk"]
content_margin_left = 12.0
content_margin_top = 6.0
content_margin_right = 12.0
content_margin_bottom = 6.0
bg_color = Color(0.603922, 0.619608, 0.247059, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.105882, 0.164706, 0.0352941, 1)
anti_aliasing = false

[node name="GameGUI" type="Control"]
process_mode = 3
material = ExtResource("1_i8dcl")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -480.0
offset_bottom = -432.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_j7p4g")
script = ExtResource("4_l6xe6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 144.0
color = Color(0.105882, 0.164706, 0.0352941, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 12.0
offset_right = 304.0
offset_bottom = 32.0
color = Color(0.054902, 0.270588, 0.0431373, 1)

[node name="ControlsScroll" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 303.0
offset_bottom = 32.0
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="ControlsText" type="RichTextLabel" parent="ControlsScroll"]
layout_mode = 2
theme_override_colors/default_color = Color(0.603922, 0.619608, 0.247059, 1)
theme_override_fonts/normal_font = ExtResource("2_7dmww")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "           Move - WASD / Arrow Keys           Pause - ESC           Restart - R           Select Menu Option - Space           Move - WASD / Arrow Keys       "
fit_content = true
scroll_following = true
autowrap_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
offset_top = 24.0
offset_right = 320.0
offset_bottom = 216.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SubViewportContainer" type="SubViewportContainer" parent="CenterContainer/HBoxContainer"]
process_mode = 1
layout_mode = 2

[node name="Game" type="SubViewport" parent="CenterContainer/HBoxContainer/SubViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(192, 192)
render_target_update_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_q8wjm")
stretch_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScoreText" type="RichTextLabel" parent="CenterContainer/HBoxContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0.603922, 0.619608, 0.247059, 1)
theme_override_fonts/normal_font = ExtResource("2_7dmww")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center]SCORE
00000


HIGH SCORE
00000[/center]"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_top = 24

[node name="GUI" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 60.0
offset_right = 192.0
offset_bottom = 204.0
theme_override_styles/panel = SubResource("StyleBoxFlat_g8rgk")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
process_mode = 2
clip_contents = true
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="GUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="GUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MenuTitle" type="RichTextLabel" parent="GUI/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.105882, 0.164706, 0.0352941, 1)
theme_override_fonts/normal_font = ExtResource("6_agor5")
theme_override_font_sizes/normal_font_size = 21
text = "PAUSED"
fit_content = true
autowrap_mode = 0

[node name="ResumeButton" type="Button" parent="GUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="NewGameButton" type="Button" parent="GUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="CreditsButton" type="Button" parent="GUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Credits"

[node name="MarginContainer" type="MarginContainer" parent="GUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect2" type="ColorRect" parent="."]
use_parent_material = true
layout_mode = 0
offset_right = 160.0
offset_bottom = 144.0
color = Color(1, 1, 1, 0.0588235)
